Bug 1488109: If the focused element has aria-activedescendant and the target id is moved to another node, move accessible focus to the new target. r=surkov

Differential Revision: https://phabricator.services.mozilla.com/D4832